Fix grid alignment across all browsers
Reworks and simplifies the grid to work more consistently across
all browsers. Also removes subgrid layout entirely in favour of
display: contents, which should minimise any browser "quirks"

--- a/style.css
+++ b/style.css
@@ -31,72 +31,56 @@ body {
   background: var(--bg-colour);
   color: var(--text-colour);
   font-family: sans-serif;
-  height: 100vh;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .dashboard {
   display: grid;
-  grid-template-rows: 1fr 0.5fr;
-  grid-template-columns: 1fr 1fr;
+
+  grid-template-columns: repeat(2, minmax(0, max-content));
+  grid-template-rows: minmax(0, 1fr) minmax(0, 0.5fr);
+
   gap: var(--margin);
-  width: fit-content;
-  height: fit-content;
-  max-width: 1200px;
-  max-height: 95vh;
-  margin: 0 auto;
-  padding: 2em;
+  justify-content: center;
+  align-items: end;
+
+  height: 95vh;
+  width: 100%;
   box-sizing: border-box;
+  padding: var(--margin);
 }
 
 .row {
-  display: grid;
-  grid-column: span 2;
-  grid-template-columns: subgrid;
-  min-height: 0;
-  align-items: center;
-  justify-items: center;
-  width: fit-content;
-  height: fit-content;
-  max-width: 100%;
-  max-height: 100%;
+  display: contents;
 }
 
-.row:first-child > :first-child {
+.row .top {
+  align-self: start;
+}
+
+.row .left {
   justify-self: start;
 }
 
-.row:first-child > :last-child {
+.row .right {
   justify-self: end;
 }
 
 .row .fw {
   grid-column: span 2;
   justify-self: stretch;
-  min-width: 0;
-  width: 100%;
-}
-
-.square {
-  aspect-ratio: 1 / 1;
-  min-width: 100px;
 }
 
 .output {
   max-width: 100%;
   max-height: 100%;
-  min-width: 0;
-  min-height: 0;
+  width: auto;
+  height: auto;
+  display: block;
+
   background: #000;
   border: 4px solid var(--border-colour);
   border-radius: 12px;
   box-sizing: border-box;
-  width: fit-content;
-  height: auto;
 }
 
 .buttons-container {
